<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.install.franknsteins.ContactFragment"
    android:background="@color/frankBackgroundColor"
    android:orientation="vertical"
    android:elevation="@dimen/design_navigation_elevation">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/contactTitleText"
        android:id="@+id/contactTitleText"
        android:gravity="center_horizontal"
        android:textColor="@color/frankTextColor"
        android:textStyle="bold"
        android:textSize="@dimen/titleTextSize"
        android:paddingTop="0dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/contactInfoText"
        android:id="@+id/contactInfoText"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/frankTextColor"
        android:paddingTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/additionalInfoText"
        android:id="@+id/additionalInfoText"
        android:textSize="20sp"
        android:textColor="@color/frankTextColor"
        android:textStyle="bold|italic"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="0dp"
        android:layout_weight="1" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/emailButtonText"
        android:id="@+id/emailButton"
        android:gravity="center"
        android:textSize="20sp"
        android:background="@color/frankTextColor"
        android:textColor="@color/frankBackgroundColor"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:elevation="@dimen/design_navigation_elevation"
        android:layout_weight="1"
        android:textStyle="bold" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/addToContactButtonText"
        android:id="@+id/addContactButton"
        android:gravity="center"
        android:textSize="20sp"
        android:background="@color/frankTextColor"
        android:textColor="@color/frankBackgroundColor"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:elevation="@dimen/design_navigation_elevation"
        android:layout_weight="1"
        android:textStyle="bold" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/findLocationButtonText"
        android:id="@+id/findLocationButton"
        android:gravity="center"
        android:textSize="20sp"
        android:background="@color/frankTextColor"
        android:textColor="@color/frankBackgroundColor"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:elevation="@dimen/design_navigation_elevation"
        android:layout_weight="1"
        android:textStyle="bold" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/goToWebsiteButtonText"
        android:id="@+id/websiteButton"
        android:gravity="center"
        android:textSize="20sp"
        android:background="@color/frankTextColor"
        android:textColor="@color/frankBackgroundColor"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:elevation="@dimen/design_navigation_elevation"
        android:layout_weight="1"
        android:textStyle="bold" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/shareButtonText"
        android:id="@+id/shareButton"
        android:gravity="center"
        android:textSize="20sp"
        android:background="@color/frankTextColor"
        android:textColor="@color/frankBackgroundColor"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:elevation="@dimen/design_navigation_elevation"
        android:layout_weight="1"
        android:textStyle="bold"
        android:layout_marginBottom="10dp" />
</LinearLayout>
